0.1.5
- Added thread for values panel updating

0.1.4 (2017-04-01)
- Fixed behavior for high precision wheel scrolling
- Fixed loading after custom font saved
- Fixed opening of read-only files

0.1.3 (2017-03-22)
- Added options dialog
- Added values side panel
- Added "File/Open File as Hex" action
- Code colorization by byte value
- Some minor fixes

0.1.2 (2017-02-04)
- Fixed issue in Android Studio 2.2.3 (issue #1)
- Fixed issue with saving in delta mode

0.1.1 (2017-01-11)
- Fixed issue on Android Studio
- Added status panel
- Added go-to position dialog
- Added crude search panel
- Adding charset now support basic filtering
- Enabled delta mode, switchable to memory mode
- Most settings are now persistent

0.1.0 (2016-12-13)
- Released